# visual-sdks

./: README.md  SauceLabs.Visual.sln
.github/: PULL_REQUEST_TEMPLATE.md
SauceLabs.Visual/: SauceLabs.Visual.csproj  VisualApi.cs
tests/: .eslintrc.cjs  .gitignore  README.md  env-vars-build-id.spec.ts  env-vars-custom-id.spec.ts  env-vars-unlinked-custom-id.spec.ts  env-vars.spec.ts  jest.config.cjs  package-lock.json  package.json  tsconfig.json
visual-dotnet/: .gitignore  Dockerfile  README.md  SauceLabs.Visual.sln
visual-espresso/: README.md  build.gradle  settings.gradle
visual-java/: .gitignore  Dockerfile  README.md  pom.xml
visual-js/: .dockerignore  .gitignore  .yarnrc.yml  CONTRIBUTING.md  Dockerfile  README.md  package-lock.json  package.json  replace_pkg_version.sh  (+3 more)
visual-python/: .bumpversion.toml  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
visual-python/integration-tests/: __init__.robot
visual-python/integration-tests/integration/: ignore_regions.robot  resource.robot
visual-python/integration-tests/login/: __init__.robot
visual-python/integration-tests/robot/: __init__.robot
visual-python/integration-tests/robot/integration/: __init__.robot  clipping.robot  cross_browser.robot  full_page_screenshot.robot  ignore_regions.robot  login.robot  resource.robot
visual-python/requirements/: build.txt  dev.txt  user.txt
visual-python/src/saucelabs_visual/: client.py  regions.py  typing.py  utils.py
visual-python/src/saucelabs_visual/frameworks/: robot.py
visual-python/tests/: test_utils.py
(+560 files in other folders)
