[project]
name = "saucelabs_visual"
version = "0.2.1"
description = "Python bindings for Sauce Labs Visual"
dependencies=[
    "requests",
    "requests-toolbelt",
    "gql",
    "tabulate",
]
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "src/**/*.py",
    "requirements/*.txt",
    "requirements.txt",
    "pyproject.toml",
]

[project.urls]
Homepage = "https://github.com/saucelabs/visual-sdks/tree/main/visual-python"
Issues = "https://github.com/saucelabs/visual-sdks/issues"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
